Using domain-grounded labels in mockup

--- a/nestingtestmockup.html
+++ b/nestingtestmockup.html
@@ -3,13 +3,13 @@
     <link rel="stylesheet" type="text/css" href="nestingtestmockup.css">
 </head>
 <body>    
-<div class="outer_div">
-    <div class="inner_div">
-        <div class="outer_div"></div>
-    <div class="inner_div">
+  <div class="comment-list">
+    <div>Comment List</div>
+    <div class="comment">
+      <div>Content</div>
+      <div class="comment-list">
+      </div>
     </div>
-</div>
-    </div>
-</div>
+  </div>
 </body>
 </html>
