--- a/nestingtestmockup.html
+++ b/nestingtestmockup.html
@@ -7,8 +7,7 @@
     <div>Comment List</div>
     <div class="comment">
       <div>Content</div>
-      <div class="comment-list">
-      </div>
+      <div class="comment-list"></div>
     </div>
   </div>
 </body>
