--- a/nestingtestmockup.html
+++ b/nestingtestmockup.html
@@ -3,12 +3,14 @@
     <link rel="stylesheet" type="text/css" href="nestingtestmockup.css">
 </head>
 <body>    
-  <div class="comment-list">
-    <div>Comment List</div>
-    <div class="comment">
-      <div>Content</div>
-      <div class="comment-list"></div>
+  <section id="comment-list">
+    <div class="comment-list">
+      <div>Comment List</div>
+      <div class="comment">
+        <div class="message">Content</div>
+        <div class="comment-list"></div>
+      </div>
     </div>
-  </div>
+  </section>
 </body>
 </html>
