--- a/nestingtestmockup.html
+++ b/nestingtestmockup.html
@@ -8,7 +8,7 @@
       <div>Comment List</div>
       <div class="comment">
         <div class="message">Content</div>
-        <div class="comment-list"></div>
+        <div class="comment-list comment-list-recurse"></div>
       </div>
     </div>
   </section>
